--- a/data.ipynb
+++ b/data.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18821c2f",
+   "metadata": {},
+   "source": [
+    "## DEPSEV Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e35f342e",
@@ -136,6 +144,392 @@
    ],
    "source": [
     "depsev.label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dd0cea7",
+   "metadata": {},
+   "source": [
+    "## DEPSIGN Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc523df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depsign_1: pandas.DataFrame = pandas.read_csv(\"data/depsign_1.tsv\", sep=\"\\t\")\n",
+    "depsign_2: pandas.DataFrame = pandas.read_csv(\"data/depsign_2.tsv\", sep=\"\\t\")\n",
+    "depsign_3: pandas.DataFrame = pandas.read_csv(\"data/depsign_3.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc7c789",
+   "metadata": {},
+   "source": [
+    "### DEPSIGN 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b529f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4496, 3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28fa58d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4496 entries, 0 to 4495\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   PID        4496 non-null   object\n",
+      " 1   Text data  4496 non-null   object\n",
+      " 2   Label      4496 non-null   object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 6.1 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "depsign_1.info(memory_usage=\"deep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abfd2551",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Label</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>moderate</th>\n",
+       "      <td>2306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>not depression</th>\n",
+       "      <td>1830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>severe</th>\n",
+       "      <td>360</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div><br><label><b>dtype:</b> int64</label>"
+      ],
+      "text/plain": [
+       "Label\n",
+       "moderate          2306\n",
+       "not depression    1830\n",
+       "severe             360\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_1.Label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f5e88cd",
+   "metadata": {},
+   "source": [
+    "### DEPSIGN 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c302c8e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3245, 3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c2193bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3245 entries, 0 to 3244\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   Pid           3245 non-null   object\n",
+      " 1   text data     3245 non-null   object\n",
+      " 2   Class labels  3245 non-null   object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 4.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "depsign_2.info(memory_usage=\"deep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "044a8caa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class labels</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>moderate</th>\n",
+       "      <td>2169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>not depression</th>\n",
+       "      <td>848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>severe</th>\n",
+       "      <td>228</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div><br><label><b>dtype:</b> int64</label>"
+      ],
+      "text/plain": [
+       "Class labels\n",
+       "moderate          2169\n",
+       "not depression     848\n",
+       "severe             228\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_2[\"Class labels\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78100373",
+   "metadata": {},
+   "source": [
+    "### DEPSIGN 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00d3e31e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8891, 3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_3.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b05bee20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8891 entries, 0 to 8890\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   PID        8891 non-null   object\n",
+      " 1   Text_data  8891 non-null   object\n",
+      " 2   Label      8891 non-null   object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 10.7 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "depsign_3.info(memory_usage=\"deep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe03c891",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Label</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>moderate</th>\n",
+       "      <td>6019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>not depression</th>\n",
+       "      <td>1971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>severe</th>\n",
+       "      <td>901</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div><br><label><b>dtype:</b> int64</label>"
+      ],
+      "text/plain": [
+       "Label\n",
+       "moderate          6019\n",
+       "not depression    1971\n",
+       "severe             901\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_3.Label.value_counts()"
    ]
   }
  ],
