feat: add cleaning funcs for columns

--- a/data.ipynb
+++ b/data.ipynb
@@ -12,6 +12,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cbaf9cd",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning Utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7d192fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_colnames(df: pandas.DataFrame) -> pandas.DataFrame:\n",
+    "    rename_dict: dict[str, str] = {}\n",
+    "\n",
+    "    for col in df.columns:\n",
+    "        if \"text\" in col:\n",
+    "            rename_dict[col] = \"text\"\n",
+    "        elif \"label\" in col:\n",
+    "            rename_dict[col] = \"label\"\n",
+    "\n",
+    "    df = df.rename(columns=rename_dict)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a095891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_colnames(df: pandas.DataFrame) -> pandas.DataFrame:\n",
+    "    clean_cols: list[str] = []\n",
+    "    \n",
+    "    for col in df.columns:\n",
+    "        clean_cols.append(col.lower().replace(\" \", \"_\"))\n",
+    "\n",
+    "    df.columns = clean_cols\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bcaa53e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_ids(df: pandas.DataFrame) -> pandas.DataFrame:\n",
+    "    id_cols: list[str] = []\n",
+    "\n",
+    "    for col in df.columns:\n",
+    "        if \"id\" in col:\n",
+    "            id_cols.append(col)\n",
+    "\n",
+    "    df = df.drop(columns=id_cols)\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "18821c2f",
    "metadata": {},
    "source": [
