feat: standardize columns for DEPSIGN datasets

--- a/data.ipynb
+++ b/data.ipynb
@@ -352,6 +352,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "507afc9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pid', 'text_data', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_1 = clean_colnames(depsign_1)\n",
+    "depsign_1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1d23d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pid', 'text', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_1 = normalize_colnames(depsign_1)\n",
+    "depsign_1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639d2434",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['text', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_1 = remove_ids(depsign_1)\n",
+    "depsign_1.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7f5e88cd",
    "metadata": {},
@@ -474,6 +537,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78d53c5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pid', 'text_data', 'class_labels'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_2 = clean_colnames(depsign_2)\n",
+    "depsign_2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c5d1a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pid', 'text', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_2 = normalize_colnames(depsign_2)\n",
+    "depsign_2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab8562b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['text', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_2 = remove_ids(depsign_2)\n",
+    "depsign_2.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "78100373",
    "metadata": {},
@@ -593,6 +719,69 @@
    ],
    "source": [
     "depsign_3.Label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f6208fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pid', 'text_data', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_3 = clean_colnames(depsign_3)\n",
+    "depsign_3.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5ff59cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pid', 'text', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_3 = normalize_colnames(depsign_3)\n",
+    "depsign_3.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b48d1fb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['text', 'label'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign_3 = remove_ids(depsign_3)\n",
+    "depsign_3.columns"
    ]
   }
  ],
