--- a/data.ipynb
+++ b/data.ipynb
@@ -783,6 +783,147 @@
     "depsign_3 = remove_ids(depsign_3)\n",
     "depsign_3.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fd2c88",
+   "metadata": {},
+   "source": [
+    "### Merge DEPSIGN Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ef3769b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depsign: pandas.DataFrame = pandas.concat([depsign_1, depsign_2, depsign_3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6871f9bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16632, 2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fc3a777",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 16632 entries, 0 to 8890\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   text    16632 non-null  object\n",
+      " 1   label   16632 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 20.2 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "depsign.info(memory_usage=\"deep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9f80e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>label</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>moderate</th>\n",
+       "      <td>10494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>not depression</th>\n",
+       "      <td>4649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>severe</th>\n",
+       "      <td>1489</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div><br><label><b>dtype:</b> int64</label>"
+      ],
+      "text/plain": [
+       "label\n",
+       "moderate          10494\n",
+       "not depression     4649\n",
+       "severe             1489\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "depsign.label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a2db729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depsign.to_csv(\"data/depsign.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
