feat: remove null and duplicate values

--- a/data.ipynb
+++ b/data.ipynb
@@ -1752,6 +1752,280 @@
       "source": [
         "depset.to_csv(\"data/depset.csv\", index=False)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "bd0d5f2b",
+      "metadata": {},
+      "source": [
+        "## Final Cleaning Steps"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d5a10306",
+      "metadata": {},
+      "source": [
+        "### Check for NULL Values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7c18760a",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>text</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>label</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ],
+            "text/plain": [
+              "text     0\n",
+              "label    0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "depset.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5b6feb51",
+      "metadata": {},
+      "source": [
+        "### Check for Duplicate Values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "df0edd18",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(6417)"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "depset.duplicated(subset=[\"text\"]).sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c3dda792",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>label</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>moderate</th>\n",
+              "      <td>4740</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>not depression</th>\n",
+              "      <td>1124</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>severe</th>\n",
+              "      <td>553</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ],
+            "text/plain": [
+              "label\n",
+              "moderate          4740\n",
+              "not depression    1124\n",
+              "severe             553\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "duplicates = depset[depset.duplicated(subset=[\"text\"])]\n",
+        "duplicates.label.value_counts()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a2d42f5a",
+      "metadata": {},
+      "source": [
+        "#### Drop Duplicate Values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4eeb2073",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "depset = depset.drop_duplicates(subset=[\"text\"], keep=\"first\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a5f585e2",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(0)"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "depset.duplicated(subset=[\"text\"]).sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8656feba",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>label</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>moderate</th>\n",
+              "      <td>6438</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>not depression</th>\n",
+              "      <td>6112</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>severe</th>\n",
+              "      <td>1218</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ],
+            "text/plain": [
+              "label\n",
+              "moderate          6438\n",
+              "not depression    6112\n",
+              "severe            1218\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "depset.label.value_counts()"
+      ]
     }
   ],
   "metadata": {
