feat: apply text preprocessing

--- a/data.ipynb
+++ b/data.ipynb
@@ -2026,6 +2026,64 @@
       "source": [
         "depset.label.value_counts()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0da52822",
+      "metadata": {},
+      "source": [
+        "## Preprocessing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9d186f30",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install contractions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4ca495c7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import contractions\n",
+        "import re"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2431f27a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def preprocessing(text: str) -> str:\n",
+        "    text = text.lower().strip()\n",
+        "    text = contractions.fix(text)\n",
+        "    text = re.sub(r\"http\\S+|www\\S+|https\\S+\", \"\", text)\n",
+        "    text = re.sub(r\"<.*?>\", \"\", text)\n",
+        "    text = re.sub(\"\\n\", \"\", text)\n",
+        "    text = re.sub(r\"([?!,+=—&%\\'\\\";:|\\(\\){}\\[\\]/])\", r\" \\1 \", text)\n",
+        "    text = re.sub(\"[ ]{2,}\", \" \", text).strip()\n",
+        "\n",
+        "    return text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d96cdc8b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "depset.text = depset.text.apply(preprocessing)"
+      ]
     }
   ],
   "metadata": {
