feat: add train-test split

--- a/data.ipynb
+++ b/data.ipynb
@@ -2084,6 +2084,53 @@
       "source": [
         "depset.text = depset.text.apply(preprocessing)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "78a98482",
+      "metadata": {},
+      "source": [
+        "## Model Training"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "6ae1f670",
+      "metadata": {},
+      "source": [
+        "### Train-Test Split"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "dc5a4cbd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0cdd3daf",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X = depset.text\n",
+        "y = depset.label"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "80cd16d9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=19, stratify=y)"
+      ]
     }
   ],
   "metadata": {
