feat: encode class labels

--- a/data.ipynb
+++ b/data.ipynb
@@ -2131,6 +2131,77 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=19, stratify=y)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "22127b01",
+      "metadata": {},
+      "source": [
+        "### Class Label Encoding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a624a5de",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cfe99eed",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "encoder = LabelEncoder()\n",
+        "\n",
+        "y_train_encoded = encoder.fit_transform(y_train)\n",
+        "y_test_encoded = encoder.transform(y_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3e5bb7b9",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array(['moderate', 'not depression', 'severe'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "encoder.classes_"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1e7f61c5",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([1, 0, 1, 1, 0, 0, 0, 1, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "y_train_encoded[:10]"
+      ]
     }
   ],
   "metadata": {
