feat: add cv strategy

--- a/data.ipynb
+++ b/data.ipynb
@@ -2202,6 +2202,34 @@
       "source": [
         "y_train_encoded[:10]"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2bbd1ffb",
+      "metadata": {},
+      "source": [
+        "### Cross-Validation Strategy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "05073895",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import StratifiedKFold"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0a864697",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "folds = StratifiedKFold(n_splits=5, shuffle=True, random_state=19)"
+      ]
     }
   ],
   "metadata": {
