feat: compute class weights

--- a/data.ipynb
+++ b/data.ipynb
@@ -2230,6 +2230,78 @@
       "source": [
         "folds = StratifiedKFold(n_splits=5, shuffle=True, random_state=19)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7ee02f67",
+      "metadata": {},
+      "source": [
+        "### Class Weights"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "34dae268",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e7ce3062",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.utils.class_weight import compute_class_weight"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "528f53fc",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([0.71288026, 0.75078391, 3.76933607])"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "class_weights = compute_class_weight(\"balanced\", classes=np.unique(y_train_encoded), y=y_train_encoded)\n",
+        "class_weights"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "09867444",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{np.int64(0): np.float64(0.7128802588996763),\n",
+              " np.int64(1): np.float64(0.7507839127471029),\n",
+              " np.int64(2): np.float64(3.7693360711841204)}"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "class_weights_dict = dict(zip(np.unique(y_train_encoded), class_weights))\n",
+        "class_weights_dict"
+      ]
     }
   ],
   "metadata": {
