feat: add TF-IDF and sentence embeddings vectors

--- a/data.ipynb
+++ b/data.ipynb
@@ -2302,6 +2302,102 @@
         "class_weights_dict = dict(zip(np.unique(y_train_encoded), class_weights))\n",
         "class_weights_dict"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "358f9a93",
+      "metadata": {},
+      "source": [
+        "### Machine Learning Models"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e1fd4e59",
+      "metadata": {},
+      "source": [
+        "#### TF-IDF Vectorization"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8d0d977e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6b16a3f8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tfidf_vectorizer = TfidfVectorizer(max_features=5000, ngram_range=(1, 2), max_df=0.95, min_df=5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "95c0949a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+        "X_test_tfidf = tfidf_vectorizer.transform(X_test)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "63678d34",
+      "metadata": {},
+      "source": [
+        "#### Sentence Embeddings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "54139378",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install sentence_transformers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8e2d041f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sentence_transformers import SentenceTransformer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cad2c9da",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model = SentenceTransformer(\"all-MiniLM-L6-v2\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a882bdfa",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train_embeddings = model.encode(X_train.tolist())\n",
+        "X_test_embeddings = model.encode(X_test.tolist())"
+      ]
     }
   ],
   "metadata": {
