feat: resample using SMOTE

--- a/data.ipynb
+++ b/data.ipynb
@@ -2398,6 +2398,58 @@
         "X_train_embeddings = model.encode(X_train.tolist())\n",
         "X_test_embeddings = model.encode(X_test.tolist())"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f9bfd247",
+      "metadata": {},
+      "source": [
+        "#### Resampling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b55f1ce5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install imblearn"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f5d9270a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from imblearn.over_sampling import SMOTE"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "59cbfaa7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train_tfidf_dense = X_train_tfidf.toarray()\n",
+        "X_train_embeddings_dense = X_train_embeddings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0ae8dccd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "smote = SMOTE(random_state=19)\n",
+        "\n",
+        "X_train_tfidf_resampled, y_train_resampled = smote.fit_resample(X_train_tfidf_dense, y_train_encoded)\n",
+        "X_train_embeddings_resampled, y_train_resampled = smote.fit_resample(X_train_embeddings_dense, y_train_encoded)"
+      ]
     }
   ],
   "metadata": {
