feat: apply cross-val and save model results

--- a/data.ipynb
+++ b/data.ipynb
@@ -2450,6 +2450,177 @@
         "X_train_tfidf_resampled, y_train_resampled = smote.fit_resample(X_train_tfidf_dense, y_train_encoded)\n",
         "X_train_embeddings_resampled, y_train_resampled = smote.fit_resample(X_train_embeddings_dense, y_train_encoded)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b57c5ee3",
+      "metadata": {},
+      "source": [
+        "#### Apply Cross-Validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "050dfd4a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Logistic Regression (TF-IDF) = LogisticRegression()\n",
+            "Cross-validated Accuracy: 0.6712 +/- 0.0067\n",
+            "Cross-validated F1 Score: 0.6506 +/- 0.0078\n",
+            "Cross-validated Recall: 0.6712 +/- 0.0067\n",
+            "Cross-validated Precision: 0.6820 +/- 0.0069\n",
+            "Confusion Matrix:\n",
+            "[[2044 1187 1919]\n",
+            " [ 885 3287  978]\n",
+            " [  56   55 5039]]\n",
+            "================================================================================\n",
+            "\n",
+            "Linear SVC (TF-IDF) = LinearSVC()\n",
+            "Cross-validated Accuracy: 0.7184 +/- 0.0057\n",
+            "Cross-validated F1 Score: 0.7074 +/- 0.0065\n",
+            "Cross-validated Recall: 0.7184 +/- 0.0057\n",
+            "Cross-validated Precision: 0.7093 +/- 0.0065\n",
+            "Confusion Matrix:\n",
+            "[[2699 1509  942]\n",
+            " [1280 3392  478]\n",
+            " [  82   59 5009]]\n",
+            "================================================================================\n",
+            "\n",
+            "Random Forest (TF-IDF) = RandomForestClassifier()\n",
+            "Cross-validated Accuracy: 0.7442 +/- 0.0043\n",
+            "Cross-validated F1 Score: 0.7480 +/- 0.0038\n",
+            "Cross-validated Recall: 0.7442 +/- 0.0043\n",
+            "Cross-validated Precision: 0.7542 +/- 0.0031\n",
+            "Confusion Matrix:\n",
+            "[[3494 1522  134]\n",
+            " [1473 3586   91]\n",
+            " [ 480  252 4418]]\n",
+            "================================================================================\n",
+            "\n",
+            "Logistic Regression (Embeddings) = LogisticRegression()\n",
+            "Cross-validated Accuracy: 0.5727 +/- 0.0052\n",
+            "Cross-validated F1 Score: 0.5317 +/- 0.0062\n",
+            "Cross-validated Recall: 0.5727 +/- 0.0052\n",
+            "Cross-validated Precision: 0.6152 +/- 0.0089\n",
+            "Confusion Matrix:\n",
+            "[[1036  912 3202]\n",
+            " [ 590 2868 1692]\n",
+            " [  78  128 4944]]\n",
+            "================================================================================\n",
+            "\n",
+            "Linear SVC (Embeddings) = LinearSVC()\n",
+            "Cross-validated Accuracy: 0.6052 +/- 0.0037\n",
+            "Cross-validated F1 Score: 0.5784 +/- 0.0054\n",
+            "Cross-validated Recall: 0.6052 +/- 0.0037\n",
+            "Cross-validated Precision: 0.6260 +/- 0.0034\n",
+            "Confusion Matrix:\n",
+            "[[1498 1028 2624]\n",
+            " [ 760 3089 1301]\n",
+            " [ 179  208 4763]]\n",
+            "================================================================================\n",
+            "\n",
+            "Random Forest (Embeddings) = RandomForestClassifier()\n",
+            "Cross-validated Accuracy: 0.7633 +/- 0.0059\n",
+            "Cross-validated F1 Score: 0.7642 +/- 0.0061\n",
+            "Cross-validated Recall: 0.7633 +/- 0.0059\n",
+            "Cross-validated Precision: 0.7655 +/- 0.0063\n",
+            "Confusion Matrix:\n",
+            "[[3539 1348  263]\n",
+            " [1544 3537   69]\n",
+            " [ 275  158 4717]]\n",
+            "================================================================================\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.model_selection import cross_val_predict, cross_validate\n",
+        "from sklearn.metrics import make_scorer, confusion_matrix, f1_score, recall_score, precision_score\n",
+        "\n",
+        "models = [\n",
+        "    (\"Logistic Regression (TF-IDF)\", LogisticRegression(C=1.0, penalty=\"l2\", max_iter=1000, class_weight=class_weights_dict), X_train_tfidf_resampled, y_train_resampled),\n",
+        "    (\"Linear SVC (TF-IDF)\", LinearSVC(C=1.0, class_weight=class_weights_dict, max_iter=1000), X_train_tfidf_resampled, y_train_resampled),\n",
+        "    (\"Random Forest (TF-IDF)\", RandomForestClassifier(n_estimators=100, class_weight=class_weights_dict, random_state=19), X_train_tfidf_resampled, y_train_resampled),\n",
+        "\n",
+        "    (\"Logistic Regression (Embeddings)\", LogisticRegression(C=1.0, penalty=\"l2\", max_iter=1000, class_weight=class_weights_dict), X_train_embeddings_resampled, y_train_resampled),\n",
+        "    (\"Linear SVC (Embeddings)\", LinearSVC(C=1.0, class_weight=class_weights_dict, max_iter=1000), X_train_embeddings_resampled, y_train_resampled),\n",
+        "    (\"Random Forest (Embeddings)\", RandomForestClassifier(n_estimators=100, class_weight=class_weights_dict, random_state=19), X_train_embeddings_resampled, y_train_resampled),\n",
+        "]\n",
+        "\n",
+        "scorings = {\n",
+        "    \"accuracy\": \"accuracy\",\n",
+        "    \"f1\": make_scorer(f1_score, average=\"weighted\"),\n",
+        "    \"recall\": make_scorer(recall_score, average=\"weighted\"),\n",
+        "    \"precision\": make_scorer(precision_score, average=\"weighted\")\n",
+        "}\n",
+        "\n",
+        "confusion_matrices = {}\n",
+        "results = {}\n",
+        "\n",
+        "for name, model, X_train_vec, y_train_vec in models:\n",
+        "    print(f\"\\n{name} = {model.__class__.__name__}()\")\n",
+        "\n",
+        "    scores = cross_validate(model, X_train_vec, y_train_vec, cv=folds, scoring=scorings)\n",
+        "\n",
+        "    accuracy = scores[\"test_accuracy\"]\n",
+        "    f1 = scores[\"test_f1\"]\n",
+        "    recall = scores[\"test_recall\"]\n",
+        "    precision = scores[\"test_precision\"]\n",
+        "\n",
+        "    results[name] = {\n",
+        "        \"Accuracy\": accuracy.mean(),\n",
+        "        \"F1\": f1.mean(),\n",
+        "        \"Recall\": recall.mean(),\n",
+        "        \"Precision\": precision.mean()\n",
+        "    }\n",
+        "\n",
+        "    print(f\"Cross-validated Accuracy: {accuracy.mean():.4f} +/- {accuracy.std():.4f}\")\n",
+        "    print(f\"Cross-validated F1 Score: {f1.mean():.4f} +/- {f1.std():.4f}\")\n",
+        "    print(f\"Cross-validated Recall: {recall.mean():.4f} +/- {recall.std():.4f}\")\n",
+        "    print(f\"Cross-validated Precision: {precision.mean():.4f} +/- {precision.std():.4f}\")\n",
+        "\n",
+        "    y_pred = cross_val_predict(model, X_train_vec, y_train_vec, cv=folds)\n",
+        "    cm = confusion_matrix(y_train_vec, y_pred)\n",
+        "    confusion_matrices[name] = cm\n",
+        "    print(f\"Confusion Matrix:\\n{cm}\")\n",
+        "    print(\"=\" * 80)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f890e55a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Results saved to model_results.csv\n",
+            "Confusion Matrices saved to confusion_matrices.csv\n"
+          ]
+        }
+      ],
+      "source": [
+        "results_df = pandas.DataFrame(results).T\n",
+        "confusion_matrices_df = pandas.DataFrame({name: cm.flatten() for name, cm in confusion_matrices.items()})\n",
+        "\n",
+        "results_df.to_csv(\"model_results.csv\", index=True)\n",
+        "confusion_matrices_df.to_csv(\"confusion_matrices.csv\", index=True)\n",
+        "\n",
+        "print(\"\\nResults saved to model_results.csv\")\n",
+        "print(\"Confusion Matrices saved to confusion_matrices.csv\")"
+      ]
     }
   ],
   "metadata": {
