feat: train RF Classifier with embeddings

--- a/data.ipynb
+++ b/data.ipynb
@@ -2794,6 +2794,61 @@
       "source": [
         "plot_confusion_matrices(confusion_matrices, class_names)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5383ce53",
+      "metadata": {},
+      "source": [
+        "#### Train the Best Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "296b48b9",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Test Set Performance:\n",
+            "                precision    recall  f1-score   support\n",
+            "\n",
+            "      moderate       0.64      0.70      0.67      1288\n",
+            "not depression       0.68      0.68      0.68      1222\n",
+            "        severe       0.45      0.22      0.29       244\n",
+            "\n",
+            "      accuracy                           0.65      2754\n",
+            "     macro avg       0.59      0.53      0.55      2754\n",
+            "  weighted avg       0.64      0.65      0.64      2754\n",
+            "\n",
+            "Test Set Accuracy: 0.6485\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn.metrics import classification_report, accuracy_score\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "best_model = RandomForestClassifier(n_estimators=100, class_weight=class_weights_dict, random_state=19)\n",
+        "best_X_train = X_train_embeddings_resampled\n",
+        "best_y_train = y_train_resampled\n",
+        "\n",
+        "best_model.fit(best_X_train, best_y_train)\n",
+        "\n",
+        "y_pred_test = best_model.predict(X_test_embeddings)\n",
+        "\n",
+        "y_test_encoded_pred = encoder.transform(y_test)\n",
+        "\n",
+        "print(\"\\nTest Set Performance:\")\n",
+        "print(classification_report(y_test_encoded_pred, y_pred_test, target_names=encoder.classes_))\n",
+        "\n",
+        "accuracy = accuracy_score(y_test_encoded_pred, y_pred_test)\n",
+        "print(f\"Test Set Accuracy: {accuracy:.4f}\")"
+      ]
     }
   ],
   "metadata": {
